{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 55,
  "lineage": "507bedec-360b-eb06-db15-6d064dc85849",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:subnet/subnet-00e9ec9f84480c5b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-00e9ec9f84480c5b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882500013896",
            "state": "available",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:subnet/subnet-082b6977807c34186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-082b6977807c34186",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882500013896",
            "state": "available",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:subnet/subnet-0fd7b94aca21ae665",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-0fd7b94aca21ae665",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882500013896",
            "state": "available",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:subnet/subnet-0149db41b1d4eb8bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-0149db41b1d4eb8bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882500013896",
            "state": "available",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:subnet/subnet-04cc0db2ea1698f3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-04cc0db2ea1698f3d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882500013896",
            "state": "available",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:subnet/subnet-0d8450afa4ecbca02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-0d8450afa4ecbca02",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882500013896",
            "state": "available",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:882500013896:loadbalancer/app/provision-system-lb/94e9cc76194abe43",
            "arn_suffix": "app/provision-system-lb/94e9cc76194abe43",
            "dns_name": "internal-provision-system-lb-1939813954.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:882500013896:loadbalancer/app/provision-system-lb/94e9cc76194abe43",
            "idle_timeout": 120,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "provision-system-lb",
            "security_groups": [
              "sg-0d8a442a144ab2d65"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e9ec9f84480c5b5"
              },
              {
                "subnet_id": "subnet-0149db41b1d4eb8bc"
              },
              {
                "subnet_id": "subnet-04cc0db2ea1698f3d"
              },
              {
                "subnet_id": "subnet-082b6977807c34186"
              },
              {
                "subnet_id": "subnet-0d8450afa4ecbca02"
              },
              {
                "subnet_id": "subnet-0fd7b94aca21ae665"
              }
            ],
            "subnets": [
              "subnet-00e9ec9f84480c5b5",
              "subnet-0149db41b1d4eb8bc",
              "subnet-04cc0db2ea1698f3d",
              "subnet-082b6977807c34186",
              "subnet-0d8450afa4ecbca02",
              "subnet-0fd7b94aca21ae665"
            ],
            "vpc_id": "vpc-03a641786867439bf",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ring_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:882500013896:listener/app/provision-system-lb/94e9cc76194abe43/3679185cf729ebe4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:882500013896:targetgroup/provision-system-target-group/47726b0baf11fd1e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:882500013896:listener/app/provision-system-lb/94e9cc76194abe43/3679185cf729ebe4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:882500013896:loadbalancer/app/provision-system-lb/94e9cc76194abe43",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.ring",
            "aws_security_group.lb_sg",
            "aws_lb.ring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:882500013896:targetgroup/provision-system-target-group/47726b0baf11fd1e",
            "arn_suffix": "targetgroup/provision-system-target-group/47726b0baf11fd1e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:882500013896:targetgroup/provision-system-target-group/47726b0baf11fd1e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "provision-system-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03a641786867439bf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecr_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:security-group/sg-033f158ca9c0a24a5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-033f158ca9c0a24a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.32.0/20",
                  "172.31.16.0/20",
                  "172.31.0.0/20",
                  "172.31.80.0/20",
                  "172.31.64.0/20",
                  "172.31.48.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "default-ipb-ecr-endpoint-sg",
            "name_prefix": "",
            "owner_id": "882500013896",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03a641786867439bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:security-group/sg-0d8a442a144ab2d65",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8a442a144ab2d65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-ring-sg",
            "name_prefix": "",
            "owner_id": "882500013896",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03a641786867439bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecr_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.32.0/20",
              "172.31.16.0/20",
              "172.31.0.0/20",
              "172.31.80.0/20",
              "172.31.64.0/20",
              "172.31.48.0/20"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1257285470",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-033f158ca9c0a24a5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnet_6",
            "aws_security_group.ecr_endpoint_sg",
            "data.aws_subnet.subnet_1",
            "data.aws_subnet.subnet_2",
            "data.aws_subnet.subnet_3",
            "data.aws_subnet.subnet_4",
            "data.aws_subnet.subnet_5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4059462765",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8a442a144ab2d65",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-801356793",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8a442a144ab2d65",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ip4_ip6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-995617243",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d8a442a144ab2d65",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:vpc-endpoint/vpce-0a11f671e407a358e",
            "dns_entry": [
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm-us-east-1e.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm-us-east-1f.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm-us-east-1d.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a11f671e407a358e-3lmst0dm-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06610162D5I358GILI26"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06610162D5I358GILI26"
              }
            ],
            "id": "vpce-0a11f671e407a358e",
            "network_interface_ids": [
              "eni-02064109fd6c929c0",
              "eni-0252b3b188b8b3b18",
              "eni-0608ddfce40ee4940",
              "eni-08391b4147e965d6e",
              "eni-088048656978c9018",
              "eni-0b6dd16b558609945"
            ],
            "owner_id": "882500013896",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033f158ca9c0a24a5"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-00e9ec9f84480c5b5",
              "subnet-0149db41b1d4eb8bc",
              "subnet-04cc0db2ea1698f3d",
              "subnet-082b6977807c34186",
              "subnet-0d8450afa4ecbca02",
              "subnet-0fd7b94aca21ae665"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03a641786867439bf"
          },
          "dependencies": [
            "aws_security_group.ecr_endpoint_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882500013896:vpc-endpoint/vpce-06e18c4dfb9d91caa",
            "dns_entry": [
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i-us-east-1f.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i-us-east-1d.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e18c4dfb9d91caa-w1c49l8i-us-east-1e.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08316231WDSY19ZJ0CIF"
              }
            ],
            "id": "vpce-06e18c4dfb9d91caa",
            "network_interface_ids": [
              "eni-00ef0ec1427f03c78",
              "eni-018b869438ea54057",
              "eni-02561b166c7cdc7d1",
              "eni-05d281be7d7431fa5",
              "eni-06019effb677bc276",
              "eni-08979e6dcc707dcad"
            ],
            "owner_id": "882500013896",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033f158ca9c0a24a5"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-00e9ec9f84480c5b5",
              "subnet-0149db41b1d4eb8bc",
              "subnet-04cc0db2ea1698f3d",
              "subnet-082b6977807c34186",
              "subnet-0d8450afa4ecbca02",
              "subnet-0fd7b94aca21ae665"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03a641786867439bf"
          },
          "dependencies": [
            "aws_security_group.ecr_endpoint_sg"
          ]
        }
      ]
    }
  ]
}